syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Order {
  string pedidoId = 1;
  string cliente = 2;
  string vendedor = 3;
  string produto = 4;
  int32 quantidade = 5;
  double precoUnitario = 6;
  double precoTotal = 7;
  string statusPedido = 8;
  string dataEntrega = 9;
}

message blank {}

message CreateOrderRequest {
  string cliente = 2;
  string vendedor = 3;
  string produto = 4;
  int32 quantidade = 5;
  double precoUnitario = 6;
  string statusPedido = 7;
  string dataEntrega = 8;
}

message OrderList {
  repeated Order orders = 1;
}
message OrderResponse {
  Order order = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
  rpc ListOrders(blank) returns (OrderList) {}
}